# agents101

./: .env.example  .gitignore  README.md  agents.yaml  agents.yaml.example  docker-compose.jaeger.yml  docker-compose.observability.yml  mcp_servers.yaml  pyproject.toml  workflows.yaml.example
docs/: README.md  build-plan.md  how-it-fits-together.md  openclaw_nemoclaw_a2a_cursor_implementation.md
docs/architecture/: 00-overview.md  01-config-and-registries.md  02-capabilities.md  03-workflows.md  04-mcp-integration.md  05-a2a.md  06-runtime-and-langgraph.md  07-storage-and-audit.md  08-security-and-policy.md  09-openclaw.md  10-nemoclaw.md  11-observability.md  12-extension-cookbook.md  13-traceability.md  README.md
docs/legacy/: openclaw_nemoclaw_a2a_cursor_implementation.md
observability/tempo/: tempo.yaml
root-agent/: .env.example  README.md  pyproject.toml
root-agent/config/: mcp_servers.yaml.example  root_agent.yaml
root-agent/config/commands/: ripgrep-search.yaml
root-agent/root_agent/: __init__.py  a2a_client.py  catalog.py  cli.py  config.py  discovery.py  main.py  mcp.py  routes.py  service.py  settings.py
root-agent/root_agent/commands/: __init__.py  exec.py  registry.py  schema.py
root-agent/root_agent/llm/: __init__.py  base.py  factory.py  providers.py  vertex.py
root-agent/root_agent/memory/: __init__.py  retriever.py  schema.py  store.py
root-agent/root_agent/planner/: __init__.py  executor.py  judge.py  planner.py  schema.py
root-agent/tests/: conftest.py  test_cli.py  test_commands.py  test_discovery.py  test_executor.py  test_llm_factory.py  test_memory.py  test_planner.py  test_service.py
scripts/: bootstrap_local_config.sh  db_init.py  generate_agent_artifacts.py  openclaw_check.sh  run_in_nemoclaw.sh  validate_agent_card.py  validate_workflows.py
scripts/sql/: app_schema.sql
src/agent_stack/: __init__.py  main.py  settings.py
src/agent_stack/registry/: __init__.py  agent_card.py  config.py  instructions.py  schemas.py
src/agent_stack/runtime/: a2a_client.py  a2a_server.py  audit.py  capabilities.py  checkpointer.py  graph_runner.py  mcp_bridge.py  observability.py  openclaw_bridge.py  otel.py  security.py  storage.py
src/agent_stack/tools/: echo.py  filesystem_safe.py
tests/: conftest.py  test_docs_snippets.py
tests/golden/: test_artifacts.py
tests/integration/: test_a2a.py  test_agent_skills.py
tests/security/: test_secret_leak.py
tests/unit/: test_agents_yaml.py  test_capability_registry.py  test_mcp_servers_yaml.py  test_observability.py  test_otel_tracing.py  test_workflow_expressions.py  test_workflows_yaml.py
(+10 files in other folders)
