[project]
name = "agent-stack"
version = "0.1.0"
description = "Workflow-driven local agent stack: MCP + A2A + LangGraph under a single capability model."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Lokesh Johri" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pyyaml>=6.0.2",
  "httpx>=0.27.0",
  "sqlalchemy>=2.0.0",
  "aiosqlite>=0.20.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
]
langgraph = [
  "langgraph>=0.2.0",
  "langchain-core>=0.3.0",
]
postgres = [
  "psycopg[binary,pool]>=3.2.0",
  "langgraph-checkpoint-postgres>=2.0.0",
]
mcp = [
  "mcp>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_stack"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
  "chaos: opt-in chaos tests (mcp crashes, remote unreachable)",
  "requires_openclaw: integration tests that need a real OpenClaw CLI",
]
